--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,4 +109,18 @@
     <string name="tv_name_account_post_full_size">Sia</string>
     <string name="tv_time_post_full_size">15th Apr</string>
     <string name="tv_describe_post_full_size">Going on a trip to America, looking for someone to join me on this epic journey through American lifestyle.</string>
+
+    <!--    Fragment Library Music-->
+    <string name="tv_title_library_music_text">For you</string>
+    <string name="tv_tracks_library_music_text">Tracks</string>
+    <string name="tv_name_song_library_music_text">Midnight Dogs - That slippery street</string>
+    <string name="tv_time_music_start_text">02:57</string>
+    <string name="tv_time_music_end_text">04:57</string>
+    <string name="midnight_dogs">Midnight Dogs</string>
+    <string name="loved_it_out_there">Loved it out there.</string>
+    <string name="_04_57">04:57</string>
+    <string name="beyonce">Beyonce</string>
+    <string name="jumping_over_the_roofs">Jumping over the roofs</string>
+    <string name="playing_now">Playing now</string>
+    <string name="_04_58">04:58</string>
 </resources>
